<resources>
    <string name="app_name">Kyiv Deaf Service</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Toolbar titles -->
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="other_activity">Other Activity</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_calls">Дзвінки</string>
    <string name="nav_drawer_interpreter">Сурдоперекладач</string>
    <string name="nav_drawer_news">Новини</string>
    <string name="nav_drawer_jkh">Служби ЖКГ</string>
    <string name="nav_drawer_emergency_numbers">Екстренні служби</string>
    <string name="nav_drawer_taxi">Виклик таксі</string>
    <string name="nav_drawer_settings">Налаштування</string>
    <string name="nav_drawer_about">Про нас</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="tools_text_account_information_username">Sotti</string>
    <string name="tools_text_account_information_email">sotti@sottocorp.com</string>

    <!-- Typeface names -->
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_medium">Roboto-Medium</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="wrong_username_id">Username is not valid</string>
    <string name="join_session">Join Session</string>
    <string name="title_activity_dispatch">DispatchActivity</string>

    <string name="loading">Завантаження...</string>

    <!--Home Services-->
    <string name="electricity">Електрик</string>
    <string name="plumber">Сантехнік</string>
    <string name="carpenter">Столяр</string>
    <string name="other">Інше</string>

    <!--Service Preferences-->
    <string name="address">Адреса</string>
    <string name="delivery_time">На котру годину</string>
    <string name="attach_pic">Прикріпити фото</string>
    <string name="order">Замовити</string>
    <string name="button_jkh_request">Викликати</string>
    <string name="problem">Опишіть проблему</string>

    <!--News Fragment-->
    <string name="date">Дата:</string>
    <string name="time">Час:</string>
    <string name="fire">ДСНС</string>
    <string name="police">Поліція</string>
    <string name="ambulance">Шв. домога</string>
    <string name="gas_service">Служба газу</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_cannot_be_viewed">Video cannot be viewed!</string>
    <string name="change_camera">Change camera</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back camera</string>
    <string name="mute_camera">Mute camera</string>

</resources>
