<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_jkh_master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Виклик електрика"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_jkh_master"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_organization_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_place_grey600_24dp" />

            <TextView
                android:id="@+id/tv_organization_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_organization_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_schedule_grey600_24dp" />

            <TextView
                android:id="@+id/tv_organization_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delivery_time"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/commentReviewCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/border"
            android:gravity="top"
            android:hint="@string/problem"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/b_jkh_request"
        android:layout_below="@+id/ll_details_container"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="#585858"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <FrameLayout
            android:id="@+id/attach_picLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:background="@drawable/ic_collections_grey600_48dp" />

        </FrameLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <Button
        android:id="@+id/b_jkh_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/button_jkh_request"
        android:textColor="@android:color/black" />

</RelativeLayout>