<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/addressLL"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/map_marker" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/address"
                        android:textSize="24dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLL"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/clock" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/delivery_time"
                        android:textSize="24dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/attach_picLL"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/picture_icon" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/problemLL"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/problem"
                    android:scaleType="fitCenter"
                    android:textSize="24dp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/order"
                android:textSize="24dp"/>

        </LinearLayout>
8
    </ScrollView>

</LinearLayout>