<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/electricityLL"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fire"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/electricity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="126dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/electricity"
                android:textSize="24dp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/light_grey" />

    <LinearLayout
        android:id="@+id/carpenterLL"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/carpenter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/carpenter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="126dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/carpenter"
                android:textSize="24dp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/light_grey" />

    <LinearLayout
        android:id="@+id/plumberLL"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/plumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/plumber" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="126dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plumber"
                android:textSize="24dp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/light_grey" />

    <LinearLayout
        android:id="@+id/otherLL"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/question_mark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="126dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/other"
                android:textSize="24dp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>